objects/LaavDev2Obj__c.object
<CustomObject>
    <fields>
        <fullName>Dev2CurrencyField__c</fullName>
        <label>Dev2CurrencyField</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Dev2Picklist_field__c</fullName>
        <label>Dev2Picklist field</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Hello</fullName>
                </value>
                <value>
                    <fullName>Hi</fullName>
                </value>
                <value>
                    <fullName>Namasthe</fullName>
                </value>
                <value>
                    <fullName>Satsrikaal</fullName>
                </value>
                <value>
                    <fullName>Vannakam</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LaavDev2Field__c</fullName>
        <label>LaavDev2Field</label>
        <type>TextArea</type>
    </fields>
    <label>LaavDev2Obj</label>
    <nameField>
        <label>LaavDev2Obj Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>LaavDev2Obj</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>